@@ -1,0 +1,10 @@
+#
+# Chameleon Modules
+#
+
+config SATA_MODULE
+	tristate "Sata Module"
+	default m
+	---help---
+	  Say Y here if you want to enable the use of this module.
+
